src/tests/snapshots/niri__tests__window_opening__check_target_size@fsT-ofT-dhP0.5-wfsAN-t.snap
---
source: src/tests/window_opening.rs
description: "want fullscreen: AN\nconfig:\nwindow-rule {\n    open-fullscreen true\n    open-floating true\n    default-window-height { proportion 0.5; }\n    default-column-display \"tabbed\"\n}\n\nlayout {\n    tab-indicator {\n        place-within-column\n    }\n}"
expression: snapshot
---
initial configure:
size: 1280 × 720, bounds: 1280 × 720, states: [Fullscreen]

post-map configures:
size: 1280 × 720, bounds: 800 × 600, states: [Fullscreen]
size: 1280 × 720, bounds: 1280 × 720, states: [Fullscreen, Activated]
size: 1280 × 720, bounds: 1280 × 720, states: [Activated]

unfullscreen configure:
size: 1264 × 704, bounds: 1264 × 704, states: [Activated]
